Bug 1135361 - Fix position of ruby annotation in vertical-rl mode when justification is applied to the base. r=jfkthame

--HG--
extra : source : 9e051be10b37ed8c189bcae17fe8cb95b490d661